# TerraRealCapital

./: .env.example  .gitignore  CLAUDE.md  Danielle_real_estate_chat.txt  README.md  last_note.txt  pyproject.toml
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/pages/: 1_Scanner.py  2_Report_Editor.py  3_Library.py
docs/: SUPABASE_SETUP.md
docs/superpowers/plans/: 2026-04-28-trc-research-tool.md  2026-05-18-trc-streamlit-research-tool.md
docs/superpowers/specs/: 2026-05-18-trc-streamlit-redesign-design.md
supabase/: config.toml
supabase/migrations/: 0001_initial_schema.sql  0002_seed_cities.sql
tests/: conftest.py  test_auth.py  test_cache.py  test_claude.py  test_config.py  test_db.py  test_models.py  test_narrative.py  test_orchestrator.py  test_perplexity.py
trc/: cache.py  claude.py  config.py  db.py  models.py  narrative.py  orchestrator.py  perplexity.py
trc/prompts/: regenerate.py  system.py
ui/: auth.py  resources.py  structured_panel.py
