[project]
name = "trc-research-tool"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.40",
  "httpx>=0.27",
  "anthropic>=0.40",
  "supabase>=2.9",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "respx>=0.21",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.uv]
package = false
